# primes_in_intervals

./: .gitignore  LICENSE  README.md  _quarto.yml  examples.md  index.qmd  primes_in_intervals.py  primes_in_intervals_db  pyproject.toml  styles.css
.github/workflows/: publish.yml  tests.yml
book/: 01-introduction.qmd  02-generate.qmd  03-data.qmd  04-analyze.qmd  05-compare.qmd  06-display.qmd  07-plots.qmd  08-worked.qmd  09-extensions.qmd  _pick.qmd  _setup.qmd  _setup_analyzed.qmd  _setup_compared.qmd  references.bib
data/: primes_in_intervals_db
docs/: cli.md
original/: primes_in_intervals.py
src/primes_in_intervals/: __init__.py  cli.py  comparisons.py  dataio.py  display.py  intervals.py  plotting.py  predictions.py  serialize.py  sieve.py  statistics.py  transforms.py
tests/: conftest.py  test_cli.py  test_comparisons.py  test_dataio.py  test_display.py  test_intervals.py  test_plotting.py  test_predictions.py  test_serialize.py  test_sieve.py  test_statistics.py  test_transforms.py
validation/: validate_counters.py  validate_pipeline.py  validate_plots.py
